# XQMprViewer

./: .gitignore  AboutDialog_8cpp.html  AboutDialog_8cpp__incl.map  AboutDialog_8cpp__incl.md5  AboutDialog_8cpp_source.html  AboutDialog_8hpp.html  AboutDialog_8hpp.js  AboutDialog_8hpp__dep__incl.map  AboutDialog_8hpp__dep__incl.md5  AboutDialog_8hpp__incl.map  AboutDialog_8hpp__incl.md5  AboutDialog_8hpp_source.html  Application_8cpp.html  Application_8cpp__incl.map  Application_8cpp__incl.md5  Application_8cpp_source.html  CMakeLists.txt  ColorAdapter_8hpp.html  ColorAdapter_8hpp.js  ColorAdapter_8hpp__dep__incl.map  ColorAdapter_8hpp__dep__incl.md5  ColorAdapter_8hpp__incl.map  ColorAdapter_8hpp__incl.md5  ColorAdapter_8hpp_source.html  ControllerPanelCornerAnnotationItem_8cpp.html  ControllerPanelCornerAnnotationItem_8cpp__incl.map  ControllerPanelCornerAnnotationItem_8cpp__incl.md5  ControllerPanelCornerAnnotationItem_8cpp_source.html  ControllerPanelCornerAnnotationItem_8hpp.html  ControllerPanelCornerAnnotationItem_8hpp.js  ControllerPanelCornerAnnotationItem_8hpp__dep__incl.map  ControllerPanelCornerAnnotationItem_8hpp__dep__incl.md5  ControllerPanelCornerAnnotationItem_8hpp__incl.map  ControllerPanelCornerAnnotationItem_8hpp__incl.md5  ControllerPanelCornerAnnotationItem_8hpp_source.html  ControllerPanelDicomItem_8cpp.html  ControllerPanelDicomItem_8cpp__incl.map  ControllerPanelDicomItem_8cpp__incl.md5  ControllerPanelDicomItem_8cpp_source.html  ControllerPanelDicomItem_8hpp.html  (+1091 more)
.github/workflows/: docs.yml  release.yml
assets/: XQMprViewer.desktop  icon.rc
lib/: CMakeLists.txt
lib/include/XQVtkViewport/: IViewportObserver.hpp  RenderStats.hpp  RenderStatsOverlay.hpp  ViewportConfig.hpp  ViewportLayout.hpp  ViewportManager.hpp  XQVtkViewport_export.hpp
lib/src/: RenderStats.cpp  RenderStatsOverlay.cpp  ViewportLayout.cpp  ViewportManager.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+60 more)
src/: CMakeLists.txt
src/adapters/include/adapters/: ColorAdapter.hpp  DicomSeriesModel.hpp  OverlayLayoutAdapter.hpp  RenderStatsModel.hpp  SliceViewAdapter.hpp
src/adapters/src/: DicomSeriesModel.cpp  OverlayLayoutAdapter.cpp  RenderStatsModel.cpp  SliceViewAdapter.cpp
src/app/include/app/: Application.hpp  Version.hpp.in
src/app/src/: Application.cpp  main.cpp
src/controllers/include/controllers/: DicomController.hpp  IControllerBase.hpp  IViewController.hpp  MultiWindowController.hpp  SliceController.hpp  SphereController.hpp  ViewportController.hpp  ViewportInteractorStyle.hpp
src/controllers/src/: DicomController.cpp  IViewController.cpp  MultiWindowController.cpp  ResliceImageViewerInteractorStyle.cpp  SliceController.cpp  SphereController.cpp  ViewportController.cpp  ViewportInteractorStyle.cpp
src/overlays/include/overlays/: CornerAnnotationOverlay.hpp  FPSOverlay.hpp  OrientationMarkerOverlay.hpp
src/overlays/src/: CornerAnnotationOverlay.cpp  FPSOverlay.cpp  OrientationMarkerOverlay.cpp
src/render/src/: RenderScheduler.cpp
src/ui/include/ui/: AboutDialog.hpp  ControllerPanel.hpp  ControllerPanelDicomItem.hpp  ControllerPanelFPSOverlayItem.hpp  ControllerPanelSphereItem.hpp  ILayoutTarget.hpp  IView.hpp  MainWindow.hpp  MultiWindowView.hpp  OverlayLayoutAdapter.hpp  ViewportLayoutItem.hpp  ViewportLayoutManager.hpp  ViewportLayoutSelector.hpp  ViewportLayoutTypes.hpp  ViewportView.hpp
src/ui/resources/: app_resources.qrc
src/ui/src/: AboutDialog.cpp  ControllerPanel.cpp  ControllerPanelCornerAnnotationItem.cpp  ControllerPanelDicomItem.cpp  ControllerPanelFPSOverlayItem.cpp  ControllerPanelOrientationMarkerItem.cpp  ControllerPanelSphereItem.cpp  MainWindow.cpp  MultiWindowView.cpp  OverlayLayoutAdapter.cpp  ViewportLayoutItem.cpp  ViewportLayoutManager.cpp  ViewportLayoutSelector.cpp  ViewportLayoutTypes.cpp  ViewportView.cpp
